--- a/index.html
+++ b/index.html
@@ -4,29 +4,91 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>The Music Village Block Party</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
-    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
-    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/Header-Dark.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Home - The Music Village Block Party</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="assets/css/Brands.css">
 </head>
 
 <body>
-    <div>
-        <div class="header-dark" style="background-image: url(&quot;none&quot;);background-color: rgb(255,255,255);">
-            <div class="container hero">
-                <div class="row">
-                    <div class="col-md-8 offset-md-2"><img class="img-fluid d-flex" src="assets/img/tmv.png" width="1000" height="1000" style="background-size:auto;background-repeat:no-repeat;width:auto;background-image:url(&quot;none&quot;);height:auto;"><a class="btn btn-primary" role="button"
-                            href="https://www.facebook.com/events/995850940611328" style="background-color: #d9176c;margin-right: 0%;margin-left: 42%;margin-top: -190px;">RSVP</a></div>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
+        <div class="container"><a class="navbar-brand" href="#home">The Music Village Block Party</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse"
+                id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#about">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#sponsors">Sponsors</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header id="home" class="masthead text-center text-white" style="background-image: url(&quot;assets/img/03.jpg&quot;);background-color: #ffffff;">
+        <div class="masthead-content">
+            <div class="container">
+                <h1 class="masthead-heading mb-0">The Music Village</h1>
+                <h2 class="masthead-subheading mb-0">Block Party</h2>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">May 4 2019, 11AM-9PM</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" style="background-color: #28b886;">RSVP</a></div>
+        </div>
+        <div class="bg-circle-1 bg-circle" style="color: #ffffff;background-image: url(&quot;none&quot;);background-color: #d9176c;"></div>
+        <div class="bg-circle-2 bg-circle" style="color: #19A2D9;background-image: url(&quot;none&quot;);background-color: #19a2d9;"></div>
+        <div class="bg-circle-3 bg-circle" style="background-image: url(&quot;none&quot;);background-color: #28B886;"></div>
+        <div class="bg-circle-4 bg-circle" style="background-image: url(&quot;none&quot;);background-color: #F18A21;"></div>
+    </header>
+    <section id="about">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid" src="assets/img/Frame%202%20(3).png"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Celebrate music in our community</h2>
+                        <p>The Music Village Block party is a celebration of music and culture in our community. Presented by The Music Village, this first-annual, all-day event is free and open to all, 11a-9p on Saturday, May 4, on the 300 block of South
+                            Michigan Street (between Wayne and Western).<br></p>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5"><img class="img-fluid" src="assets/img/55835901_2063535563742395_6090458905006047232_o.jpg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <h2 class="display-4">Something for everyone</h2>
+                        <p>The day will feature regional and local artists, performing on the Harman International Mobile Stage. Food, vendors, children's activities and programs, dancers, and community partners will enliven the day. South Bend Brew Werks
+                            will offer beer for sale (over 21 with valid photo ID required for wristband).<br></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="brands">
+        <a id="sponsors">
+            <div class="p-5">
+                <h2 class="display-4">Sponsors</h2>
+                <p>TMV is committed to paying our artists honoraria their talent. Sponsorships are imperative to making this a viable undertaking, and one which, we anticipate, will become an annual tradition.<br></p>
+            </div> <img src="assets/img/wvpe.png"><img src="assets/img/harman.png"><img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 153px;"><img src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);">
+            <img
+                src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/999.png" style="background-color: rgba(0,0,0,0);height: 98px;"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 98px;"><img src="assets/img/lithotone.jpg" style="background-color: rgba(0,0,0,0);height: 128px;">
+                <div
+                    class="p-5">
+                    <p>The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
+                        you know might be interested in prominently supporting the event, please contact tmv@themusicvillage.org<br></p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    </a>
+    </div>
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© The Music Village 2019</p>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
