--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <h1 class="masthead-heading mb-0">The Music Village</h1>
                 <h2 class="masthead-subheading mb-0">Block Party</h2>
-                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">May 4 2019, 11AM-9PM</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" style="background-color: #28b886;">RSVP</a></div>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">May 4 2019, 11AM-9PM</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" style="background-color: #19a2d9;">RSVP</a></div>
         </div>
         <div class="bg-circle-1 bg-circle" style="color: #ffffff;background-image: url(&quot;none&quot;);background-color: #d9176c;"></div>
         <div class="bg-circle-2 bg-circle" style="color: #19A2D9;background-image: url(&quot;none&quot;);background-color: #19a2d9;"></div>
