updated with volunteer form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/Brands.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
 </head>
 
 <body>
@@ -19,6 +22,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#about">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#sponsors">Sponsors</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#volunteer">Volunteer</a></li>
                 </ul>
             </div>
         </div>
@@ -28,7 +32,7 @@
             <div class="container">
                 <h1 class="masthead-heading mb-0">The Music Village</h1>
                 <h2 class="masthead-subheading mb-0">Block Party</h2>
-                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">May 4 2019, 11AM-9PM</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" style="background-color: #19a2d9;">RSVP</a></div>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">May 4 2019, 11AM-9PM</h2><a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" target="_blank" style="background-color: #28b886;">RSVP</a></div>
         </div>
         <div class="bg-circle-1 bg-circle" style="color: #ffffff;background-image: url(&quot;none&quot;);background-color: #d9176c;"></div>
         <div class="bg-circle-2 bg-circle" style="color: #19A2D9;background-image: url(&quot;none&quot;);background-color: #19a2d9;"></div>
@@ -44,7 +48,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Celebrate music in our community</h2>
-                        <p>The Music Village Block party is a celebration of music and culture in our community. Presented by The Music Village, this first-annual, all-day event is free and open to all, 11a-9p on Saturday, May 4, on the 300 block of South
+                        <p>The Music Village Block Party is a celebration of music and culture in our community. Presented by The Music Village, this first-annual, all-day event is free and open to all, 11a-9p on Saturday, May 4, on the 300 block of South
                             Michigan Street (between Wayne and Western).<br></p>
                     </div>
                 </div>
@@ -71,22 +75,42 @@
         <a id="sponsors">
             <div class="p-5">
                 <h2 class="display-4">Sponsors</h2>
-                <p>TMV is committed to paying our artists honoraria their talent. Sponsorships are imperative to making this a viable undertaking, and one which, we anticipate, will become an annual tradition.<br></p>
-            </div> <img src="assets/img/wvpe.png"><img src="assets/img/harman.png"><img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 153px;"><img src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);">
+                <p style="font-size: 20px;">TMV is committed to paying our artists honoraria their talent. Sponsorships are imperative to making this a viable undertaking, and one which, we anticipate, will become an annual tradition.<br></p>
+            </div> <img src="assets/img/harman.png"><img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 153px;"><img src="assets/img/999.png" style="background-color: rgba(0,0,0,0);height: 247px;">
             <img
-                src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/999.png" style="background-color: rgba(0,0,0,0);height: 98px;"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 98px;"><img src="assets/img/lithotone.jpg" style="background-color: rgba(0,0,0,0);height: 128px;">
-                <div
-                    class="p-5">
-                    <p>The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
-                        you know might be interested in prominently supporting the event, please contact tmv@themusicvillage.org<br></p>
+                src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);"><img src="assets/img/nd.jpg" style="background-color: rgba(0,0,0,0);height: 89px;"><img src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/wvpe.png"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 83px;"><img src="assets/img/lithotone.jpg"
+                    style="background-color: rgba(0,0,0,0);height: 128px;"><img src="assets/img/LavenNewLogoLook8hr2cmyk.jpg" style="background-color: rgba(0,0,0,0);height: 108px;"><img src="assets/img/wasteaway.png" style="background-color: rgba(0,0,0,0);height: 71px;">
+                <div class="p-5">
+                    <p style="font-size: 20px;">The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
+                        you know might be interested in prominently supporting the event, please contact us.<br></p>
+                </div>
+        </a>
     </div>
-    </a>
+    <div id="volunteer" class="contact-clean">
+        <div class="embed-responsive embed-responsive-16by9" style="height: 713px;"><iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLScCVvgafRSVOC6pFM_TM7fGkWsSdhW8KShitLyk9CyjZt7w_Q/viewform?embedded=true"></iframe></div>
     </div>
-    <footer class="py-5 bg-black">
-        <div class="container">
-            <p class="text-center text-white m-0 small">Copyright&nbsp;© The Music Village 2019</p>
-        </div>
-    </footer>
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Contact</h3>
+                        <ul>
+                            <li><a href="https://www.themusicvillage.org/" target="_blank">themusicvillage.org</a></li>
+                            <li><a href="tel:+15742547664">(574) 245-7664<br></a></li>
+                            <li><a href="mailto:tmv@themusicvillage.com">tmv@themusicvillage.org<br></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>The Music Village</h3>
+                        <p>The Music Village is Michiana's community musical arts center located in the heart of downtown South Bend. We believe that where the arts flourish, so do people and communities.<br></p>
+                    </div>
+                    <div class="col item social"><a href="https://www.facebook.com/villagemusicalarts/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/musicvillagesb" target="_blank"><i class="icon ion-social-twitter"></i></a></div>
+                </div>
+                <p class="copyright">The Music Village © 2019</p>
+            </div>
+        </footer>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
