--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section>
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
@@ -76,18 +74,22 @@
             <div class="p-5">
                 <h2 class="display-4">Sponsors</h2>
                 <p style="font-size: 20px;">TMV is committed to paying our artists honoraria their talent. Sponsorships are imperative to making this a viable undertaking, and one which, we anticipate, will become an annual tradition.<br></p>
-            </div> <img src="assets/img/harman.png"><img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 153px;"><img src="assets/img/999.png" style="background-color: rgba(0,0,0,0);height: 247px;">
+            </div> <img src="assets/img/harman.png"><img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 126px;"><img src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);"><img src="assets/img/999.png"
+                style="background-color: rgba(0,0,0,0);height: 241px;"><img src="assets/img/nd.jpg" style="background-color: rgba(0,0,0,0);height: 89px;"><img src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/wasteaway.png" style="background-color: rgba(0,0,0,0);height: 71px;">
             <img
-                src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);"><img src="assets/img/nd.jpg" style="background-color: rgba(0,0,0,0);height: 89px;"><img src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/wvpe.png"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 83px;"><img src="assets/img/lithotone.jpg"
-                    style="background-color: rgba(0,0,0,0);height: 128px;"><img src="assets/img/LavenNewLogoLook8hr2cmyk.jpg" style="background-color: rgba(0,0,0,0);height: 108px;"><img src="assets/img/wasteaway.png" style="background-color: rgba(0,0,0,0);height: 71px;">
-                <div class="p-5">
-                    <p style="font-size: 20px;">The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
-                        you know might be interested in prominently supporting the event, please contact us.<br></p>
-                </div>
+                src="assets/img/wvpe.png"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 83px;"><img src="assets/img/lithotone.jpg" style="background-color: rgba(0,0,0,0);height: 128px;"><img src="assets/img/LavenNewLogoLook8hr2cmyk.jpg" style="background-color: rgba(0,0,0,0);height: 108px;">
+                <img
+                    src="assets/img/Frame%202%20(1).png" style="background-color: rgba(0,0,0,0);height: 107px;"><img src="assets/img/rpi.png" style="background-color: rgba(0,0,0,0);height: 181px;"><img src="assets/img/vsbm.png" style="background-color: rgba(0,0,0,0);height: 181px;"><img src="assets/img/cressy.jpg" style="background-color: rgba(0,0,0,0);height: 89px;">
+                    <img
+                        src="assets/img/sbcubs.png" style="background-color: rgba(0,0,0,0);height: 255px;">
+                        <div class="p-5">
+                            <p style="font-size: 20px;">The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
+                                you know might be interested in prominently supporting the event, please contact us.<br></p>
+                        </div>
         </a>
     </div>
-    <div id="volunteer" class="contact-clean">
-        <div class="embed-responsive embed-responsive-16by9" style="height: 713px;"><iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLScCVvgafRSVOC6pFM_TM7fGkWsSdhW8KShitLyk9CyjZt7w_Q/viewform?embedded=true"></iframe></div>
+    <div id="volunteer" class="contact-clean" style="background-color: rgb(255,255,255);">
+        <div class="embed-responsive embed-responsive-16by9" style="height: 1349px;"><iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLScCVvgafRSVOC6pFM_TM7fGkWsSdhW8KShitLyk9CyjZt7w_Q/viewform?embedded=true"></iframe></div>
     </div>
     <div class="footer-dark">
         <footer>
