site with lineup

--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html>
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139187575-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-139187575-1');
-    </script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - The Music Village Block Party</title>
@@ -19,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+    <link rel="stylesheet" href="assets/css/Article-Clean.css">
     <link rel="stylesheet" href="assets/css/Brands.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css">
@@ -26,11 +18,11 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
-        <div class="container"><a class="navbar-brand" href="#home">The Music Village Block Party</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarResponsive">
+        <div class="container"><a class="navbar-brand" href="#home">TMV Block party</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#about">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#lineup">Lineup</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#sponsors">Sponsors</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#volunteer">Volunteer</a></li>
                 </ul>
@@ -52,9 +44,6 @@
     <section id="about">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid" src="assets/img/Frame%202%20(3).png"></div>
-                </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Celebrate music in our community</h2>
@@ -62,13 +51,13 @@
                             Michigan Street (between Wayne and Western).<br></p>
                     </div>
                 </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid" src="assets/img/Frame%202%20(3).png"></div>
+                </div>
             </div>
         </div>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5"><img class="img-fluid" src="assets/img/55835901_2063535563742395_6090458905006047232_o.jpg"></div>
-                </div>
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4">Something for everyone</h2>
@@ -76,26 +65,43 @@
                             will offer beer for sale (over 21 with valid photo ID required for wristband).<br></p>
                     </div>
                 </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5"><img class="img-fluid" src="assets/img/55835901_2063535563742395_6090458905006047232_o.jpg"></div>
+                </div>
             </div>
         </div>
     </section>
+    <div id="lineup" class="brands">
+        <a>
+            <div class="p-5">
+                <h2 class="display-4">Lineup</h2>
+            </div>
+        </a>
+    </div>
+    <div class="article-clean">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2">
+                    <div class="intro"><img class="img-fluid" src="assets/img/lineup.png"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="brands">
         <a id="sponsors">
             <div class="p-5">
                 <h2 class="display-4">Sponsors</h2>
                 <p style="font-size: 20px;">TMV is committed to paying our artists honoraria their talent. Sponsorships are imperative to making this a viable undertaking, and one which, we anticipate, will become an annual tradition.<br></p>
-            </div> <img src="assets/img/harman.png"><img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 126px;"><img src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);"><img src="assets/img/999.png"
-                style="background-color: rgba(0,0,0,0);height: 241px;"><img src="assets/img/nd.jpg" style="background-color: rgba(0,0,0,0);height: 89px;"><img src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/wasteaway.png" style="background-color: rgba(0,0,0,0);height: 71px;">
+            </div> <img src="assets/img/dtsb.png"><img class="rounded-circle" src="assets/img/ezgif-4-eb9639ee3a12.png" style="background-color: #282932;height: 126px;"><img src="assets/img/Venues%20Parks%20and%20Arts%20logo%203C%20(1)%20(2).png" style="background-color: rgba(40,41,50,0);"><img src="assets/img/999.png" style="background-color: rgba(0,0,0,0);height: 241px;">
             <img
-                src="assets/img/wvpe.png"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 83px;"><img src="assets/img/lithotone.jpg" style="background-color: rgba(0,0,0,0);height: 128px;"><img src="assets/img/LavenNewLogoLook8hr2cmyk.jpg" style="background-color: rgba(0,0,0,0);height: 108px;">
-                <img
-                    src="assets/img/Frame%202%20(1).png" style="background-color: rgba(0,0,0,0);height: 107px;"><img src="assets/img/rpi.png" style="background-color: rgba(0,0,0,0);height: 181px;"><img src="assets/img/vsbm.png" style="background-color: rgba(0,0,0,0);height: 181px;"><img src="assets/img/cressy.jpg" style="background-color: rgba(0,0,0,0);height: 89px;">
-                    <img
-                        src="assets/img/sbcubs.png" style="background-color: rgba(0,0,0,0);height: 255px;">
-                        <div class="p-5">
-                            <p style="font-size: 20px;">The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
-                                you know might be interested in prominently supporting the event, please contact us.<br></p>
-                        </div>
+                src="assets/img/nd.jpg" style="background-color: rgba(0,0,0,0);height: 89px;"><img src="assets/img/UYT%20Logo&Mission%20(1)%20(1).png"><img src="assets/img/wasteaway.png" style="background-color: rgba(0,0,0,0);height: 71px;"><img src="assets/img/wvpe.png"><img src="assets/img/gamusic.png" style="background-color: rgba(0,0,0,0);height: 83px;"><img src="assets/img/lithotone.jpg"
+                    style="background-color: rgba(0,0,0,0);height: 128px;"><img src="assets/img/LavenNewLogoLook8hr2cmyk.jpg" style="background-color: rgba(0,0,0,0);height: 108px;"><img src="assets/img/Frame%202%20(1).png" style="background-color: rgba(0,0,0,0);height: 107px;"><img src="assets/img/rpi.png"
+                    style="background-color: rgba(0,0,0,0);height: 181px;"><img src="assets/img/vsbm.png" style="background-color: rgba(0,0,0,0);height: 181px;"><img src="assets/img/cressy.jpg" style="background-color: rgba(0,0,0,0);height: 89px;"><img src="assets/img/sbcubs.png"
+                    style="background-color: rgba(0,0,0,0);height: 255px;">
+                <div class="p-5">
+                    <p style="font-size: 20px;">The Music Village leadership seeks to make this Block Party a viable and first-annual event. To that end, TMV seeks sponsors to help underwrite costs for artists, infrastructure, promotion, and more. If you or someone/organization/corporation
+                        you know might be interested in prominently supporting the event, please contact us.<br></p>
+                </div>
         </a>
     </div>
     <div id="volunteer" class="contact-clean" style="background-color: rgb(255,255,255);">
@@ -123,6 +129,7 @@
             </div>
         </footer>
     </div>
+    <div class="article-clean"></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
