--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#about">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#lineup">Lineup</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#sponsors">Sponsors</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#volunteer">Volunteer</a></li>
                 </ul>
@@ -34,7 +33,7 @@
             <div class="container">
                 <h1 class="masthead-heading mb-0">The Music Village</h1>
                 <h2 class="masthead-subheading mb-0">Block Party</h2>
-                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">May 4 2019, 11AM-9PM</h2><a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" target="_blank" style="background-color: #28b886;">RSVP</a></div>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">Saturday, May 2, 2020 at Howard Park</h2><a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" target="_blank" style="background-color: #28b886;">RSVP</a></div>
         </div>
         <div class="bg-circle-1 bg-circle" style="color: #ffffff;background-image: url(&quot;none&quot;);background-color: #d9176c;"></div>
         <div class="bg-circle-2 bg-circle" style="color: #19A2D9;background-image: url(&quot;none&quot;);background-color: #19a2d9;"></div>
@@ -71,22 +70,6 @@
             </div>
         </div>
     </section>
-    <div id="lineup" class="brands">
-        <a>
-            <div class="p-5">
-                <h2 class="display-4">Lineup</h2>
-            </div>
-        </a>
-    </div>
-    <div class="article-clean">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2">
-                    <div class="intro"><img class="img-fluid" src="assets/img/lineup.png"></div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="brands">
         <a id="sponsors">
             <div class="p-5">
@@ -105,7 +88,6 @@
         </a>
     </div>
     <div id="volunteer" class="contact-clean" style="background-color: rgb(255,255,255);">
-        <div class="embed-responsive embed-responsive-16by9" style="height: 1349px;"><iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLScCVvgafRSVOC6pFM_TM7fGkWsSdhW8KShitLyk9CyjZt7w_Q/viewform?embedded=true"></iframe></div>
     </div>
     <div class="footer-dark">
         <footer>
