--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <h1 class="masthead-heading mb-0">The Music Village</h1>
                 <h2 class="masthead-subheading mb-0">Block Party</h2>
-                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">Saturday, May 2, 2020 at Howard Park</h2><a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://www.facebook.com/events/the-music-village/tmv-block-party-2019/995850940611328/" target="_blank" style="background-color: #28b886;">RSVP</a></div>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">Saturday, May 2, 2020 at Howard Park</h2><a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://conta.cc/2EHjTae" target="_blank" style="background-color: #28b886;">Survey</a></div>
         </div>
         <div class="bg-circle-1 bg-circle" style="color: #ffffff;background-image: url(&quot;none&quot;);background-color: #d9176c;"></div>
         <div class="bg-circle-2 bg-circle" style="color: #19A2D9;background-image: url(&quot;none&quot;);background-color: #19a2d9;"></div>
@@ -46,8 +46,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Celebrate music in our community</h2>
-                        <p>The Music Village Block Party is a celebration of music and culture in our community. Presented by The Music Village, this first-annual, all-day event is free and open to all, 11a-9p on Saturday, May 4, on the 300 block of South
-                            Michigan Street (between Wayne and Western).<br></p>
+                        <p>The Music Village Block Party is a celebration of music and culture in our community. Presented by The Music Village, this second-annual, all-day event is free and open to all, Saturday, May 20, 2020, at Howard Park.<br></p>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-2">
@@ -60,7 +59,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4">Something for everyone</h2>
-                        <p>The day will feature regional and local artists, performing on the Harman International Mobile Stage. Food, vendors, children's activities and programs, dancers, and community partners will enliven the day. South Bend Brew Werks
+                        <p>The day will feature regional and local artists and performances. Food, vendors, children's activities and programs, dancers, and community partners will enliven the day. South Bend Brew Werks
                             will offer beer for sale (over 21 with valid photo ID required for wristband).<br></p>
                     </div>
                 </div>
