--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#about">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#sponsors">Sponsors</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#volunteer">Volunteer</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#booking">Booking</a></li>
                 </ul>
             </div>
         </div>
@@ -46,7 +46,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Celebrate music in our community</h2>
-                        <p>The Music Village Block Party is a celebration of music and culture in our community. Presented by The Music Village, this second-annual, all-day event is free and open to all, Saturday, May 20, 2020, at Howard Park.<br></p>
+                        <p>The Music Village Block Party is a celebration of music and culture in our community. Presented by The Music Village, this second-annual, all-day event is free and open to all, Saturday, May 2, 2020, at Howard Park.<br></p>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-2">
@@ -86,7 +86,8 @@
                 </div>
         </a>
     </div>
-    <div id="volunteer" class="contact-clean" style="background-color: rgb(255,255,255);">
+    <div id="booking" class="contact-clean" style="background-color: rgb(255,255,255);">
+        <iframe src="https://https://docs.google.com/forms/d/e/1FAIpQLSfz1-PVvGHUZfMhaPqdFs4lT3p6eRAdeuw6bGX0rQ6a_2J7YQ/viewform?embedded=true" width="640" height="1722" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
     <div class="footer-dark">
         <footer>
